horizontal overflow fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,7 @@ body {
     #018436 100%
   );
   background-repeat: no-repeat;
+  overflow-x: hidden;
 }
 
 .container {
